@@ -2,7 +2,7 @@ require "test/unit"
 require "rexml/parsers/sax2parser"
 require "rexml/sax2listener"
 
-module REXML
+module REXMLTests
 class TestSAX2Parser < Test::Unit::TestCase
   class TestDocumentTypeDeclaration < self
     private
