@@ -2,7 +2,7 @@ require "test/unit/testcase"
 
 require 'rexml/document'
 
-module REXMLTest
+module REXMLTests
   class CommentTester < Test::Unit::TestCase
     # Bug #5278
     def test_hyphen_end_line_in_doctype
